[gd_scene load_steps=12 format=2]

[ext_resource path="res://Biksu/biksu.png" type="Texture" id=2]
[ext_resource path="res://Biksu.gd" type="Script" id=6]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 300, 300 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 300, 300 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 300, 0, 300, 300 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 600, 0, 300, 300 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 900, 0, 300, 300 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1200, 0, 300, 300 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": false,
"name": "diam",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "serang",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 18.3601, 18.2337 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 122.083, 51.3206 )

[node name="Biksu" type="KinematicBody2D"]
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 38.8133, -13.6304 )
scale = Vector2( 0.761379, 0.641794 )
frames = SubResource( 7 )
animation = "diam"
__meta__ = {
"_editor_description_": ""
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.58827, -2.82347 )
shape = SubResource( 8 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2( -2.26473, -0.323532 )
shape = SubResource( 9 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Timer2" type="Timer" parent="."]
autostart = true

[node name="Timer3" type="Timer" parent="."]
autostart = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 39.2616, -0.105038 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( -36.2207, 0.272312 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
